--- a/css/stile.css
+++ b/css/stile.css
@@ -1,21 +1,19 @@
 body{
-    /* background-color: #222222; */
     font-family: 'Roboto', sans-serif;
     font-size: 28px;
+    background-image: url(../img/dusseldorf-2098164_1280.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-header img{
- width: 100%;
- max-height: 600px
-}
+
 section{
-    height: 550px;
-    margin: 0% auto;
-    position: absolute;
-    top: 150px;
-    left: 0;
-    right: 0;
+    display: flex;
+    justify-content: center;
+    height: 587px;
+    align-items: flex-end;
 }
-.flex-container{
+
+section .card{
     width: 400px;
     background-color: #000;
     color: #fff;
@@ -23,7 +21,6 @@ section{
     box-shadow: 5px 10px 15px rgba(0,0,0,.4);
     opacity: 0.9;
     filter: alpha(opacity=50);
-
 }
 section div img{
     width: 50%;
@@ -41,9 +38,9 @@ p{
     padding: 10px;
 }
 h1{
-    font-size: 25px;
+    font-size: 28px;
     text-align: center;
-    margin-top: -17px;
+    margin-top: 9px;
     color: white;
     text-transform: uppercase;
     font-family: 'Roboto', sans-serif;
@@ -51,4 +48,26 @@ h1{
 }
 hr{
     width: 92px;
+}
+footer{
+    color: #000;
+    font-size: 15px;
+    text-align: center;
+}
+
+@media screen and (max-width: 1300px) {
+    footer {
+      color: #fff;
+    }
+  }
+@media screen and (max-width: 600px) {
+    body {
+        background-image: none;
+    }
+    section {
+        height: auto;
+    }
+    footer {
+        color: #000;
+      }
 }
