--- a/css/stile.css
+++ b/css/stile.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'Roboto', sans-serif;
     font-size: 28px;
-    background-image: url(../img/dusseldorf-2098164_1280.png);
+    background-image: url(../img/dusseldorf.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
