--- a/css/stile.css
+++ b/css/stile.css
@@ -6,10 +6,29 @@ body{
     background-repeat: no-repeat;
 }
 
+div .icon{
+    display: flex;
+}
+.logo a{
+    font-size: 0.8em; 
+    color: white; 
+    float: right; 
+    padding: 10px;
+}
+.logo:hover{
+    transition: all .25s ease;
+    transform-origin: initial;
+    transform: scale(1.3);
+}
+div .content{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
 section{
     display: flex;
     justify-content: center;
-    height: 536px;
+    height: 587px;
     align-items: flex-end;
 }
 
@@ -26,12 +45,7 @@ section div img{
     width: 50%;
     height: auto;
     border-radius: 50%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    opacity: 1.0;
-    padding: 38px;
-    
+    padding: 22px;
 }
 p{
     text-align: center;
@@ -49,16 +63,18 @@ h1{
 hr{
     width: 92px;
 }
-footer{
+footer {
     color: #000;
     font-size: 15px;
     text-align: center;
+    text-decoration: none;
 }
 
 @media screen and (max-width: 1300px) {
-    footer {
+    /* footer a{
       color: #fff;
-    }
+      text-decoration: none;
+    } */
   }
 @media screen and (max-width: 600px) {
     body {
@@ -69,5 +85,6 @@ footer{
     }
     footer {
         color: #000;
+        text-decoration: none;
       }
 }
