--- a/css/stile.css
+++ b/css/stile.css
@@ -9,13 +9,13 @@ body{
 div .icon{
     display: flex;
 }
-.logo a{
+span.logo a{
     font-size: 0.8em; 
     color: white; 
     float: right; 
     padding: 10px;
 }
-.logo:hover{
+span.logo:hover{
     transition: all .25s ease;
     transform-origin: initial;
     transform: scale(1.3);
@@ -71,10 +71,10 @@ footer {
 }
 
 @media screen and (max-width: 1300px) {
-    /* footer a{
+     footer {
       color: #fff;
       text-decoration: none;
-    } */
+    } 
   }
 @media screen and (max-width: 600px) {
     body {
